--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^11.9",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "mcamara/laravel-localization": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
